// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GlossaryTermCard Snapshot > renders with keyword provided correctly 1`] = `
"<div><a href="/posts/example-term/" class="group hover:border-primary relative flex flex-col border-2 px-4 pt-4 pb-8">
    <h2 class="text-sm font-medium">Example Keyword</h2>
    <p class="mt-4 text-sm">A brief overview of the term.</p>
  </a></div>"
`;

exports[`GlossaryTermCard Snapshot > renders without keyword (fallback to title) correctly 1`] = `
"<div><a href="/posts/example-term/" class="group hover:border-primary relative flex flex-col border-2 px-4 pt-4 pb-8">
    <h2 class="text-sm font-medium">Example Title</h2>
    <p class="mt-4 text-sm">A brief overview of the term.</p>
  </a></div>"
`;
